--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chalk": "2.4.2",
     "jest": "25.0.0",
     "pixelmatch": "5.0.2",
+    "pngjs": "3.4.0",
     "prettier": "1.18.2",
     "puppeteer": "1.19.0",
     "rimraf": "3.0.0"
